# riptable

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  BUILDNOTES.txt  CMakeLists.txt.UNUSED  LICENSE  LICENSES-thirdparty.md  MANIFEST.in  README.md  environment.yml  meta.yaml  pyproject.toml  requirements.txt  runtest.py  setup.py
.github/workflows/: conda_package.yaml  python-package.yml
conda_recipe/: bld.bat  conda_build_config.yaml  meta.yaml  run_test.bat  run_test.sh
dev_tools/: _docstring_config.py  docstring_filters.txt  docstring_xfails.txt  gen_requirements.py  validate_docstrings.py
docs/: CONTRIBUTING.md  THREADING.md  environment.yml
docs/source/: benchmarking.rst  conf.py  index.rst  modules.rst  riptable.Utils.rst  riptable.benchmarks.rst  riptable.hypothesis_tests.rst  riptable.rst  riptable.test_tooling_integration.rst  riptable.test_tooling_integration.test_display.rst  riptable.tests.rst
docs/source/_autoapi_templates/python/: module.rst  package.rst
docs/source/_static/: riptable.css
docs/source/tutorial/: RiptableExercises.ipynb  RiptableSolutions.ipynb  categoricals_user_guide.rst  categoricals_user_guide_access_data.rst  categoricals_user_guide_base_index.rst  categoricals_user_guide_bins_categories.rst  categoricals_user_guide_comparisons.rst  categoricals_user_guide_construct.rst  categoricals_user_guide_dtype.rst  categoricals_user_guide_filters.rst  categoricals_user_guide_indexing.rst  categoricals_user_guide_invalid_categories.rst  categoricals_user_guide_order.rst  cross_join_using_merge2.rst  tutorial.rst  tutorial_accums.ipynb  tutorial_accums.rst  tutorial_cat_adv_instantiation.rst  tutorial_cat_reduce.rst  tutorial_categoricals.ipynb  tutorial_categoricals.rst  tutorial_concat.ipynb  tutorial_concat.rst  tutorial_datasets.ipynb  tutorial_datasets.rst  tutorial_datetimes.ipynb  tutorial_datetimes.rst  tutorial_filters.ipynb  tutorial_filters.rst  tutorial_intro.ipynb  tutorial_intro.rst  tutorial_io.ipynb  tutorial_io.rst  tutorial_merge.ipynb  tutorial_merge.rst  tutorial_missing_data.ipynb  tutorial_missing_data.rst  tutorial_numpy_rt.rst  tutorial_performance.ipynb  tutorial_performance.rst  (+7 more)
riptable/: __init__.py  _version.py  config.py  conftest.py  rt_accum2.py  rt_accumtable.py  rt_algos.py  rt_bin.py  rt_categorical.py  rt_compressedarray.py  rt_csv.py  rt_dataset.py  rt_datetime.py  rt_display.py  rt_ema.py  rt_enum.py  rt_fastarray.py  rt_fastarraynumba.py  rt_groupby.py  rt_groupbykeys.py  rt_groupbynumba.py  rt_groupbyops.py  rt_grouping.py  rt_hstack.py  rt_imatrix.py  rt_io.py  rt_itemcontainer.py  rt_ledger.py  rt_logging.py  rt_matplotlib.py  rt_merge.py  rt_merge_asof.py  rt_meta.py  rt_misc.py  rt_mlutils.py  rt_multiset.py  rt_numpy.py  rt_pdataset.py  rt_pgroupby.py  rt_sds.py  (+8 more)
riptable/Utils/: appdirs.py  common.py  conversion_utils.py  display_options.py  ipython_utils.py  pandas_utils.py  rt_display_nested.py  rt_display_properties.py  rt_metadata.py  rt_testdata.py  rt_testing.py  teamcity_helper.py  terminalsize.py
riptable/benchmarks/: __init__.py  __main__.py  analysis.py  bench_categorical.py  bench_grouping.py  bench_merge.py  bench_numpy.py  bench_operators.py  bench_primops.py  benchmark.py  main.py  rand_data.py  rand_keydata.py  results.py  runner.py
riptable/hypothesis_tests/: conftest.py  test_categorical_property.py  test_riptide_numpy_equivalency.py  test_rt_numpy_property.py  test_sds_property.py  test_ufunc_unary.py
riptable/hypothesis_tests/strategies/: categorical_strategy.py  helper_strategies.py
riptable/numba/: __init__.py  indexing.py  invalid_values.py
riptable/test_tooling_integration/: __init__.py  ipykernel_integration_test.py  ipython_compatibility_test.py  ipython_integration_test.py  run.py
riptable/test_tooling_integration/test_display/: test_display.py  vnu_checker.py
riptable/testing/: array_assert.py  randgen.py
riptable/tests/: __init__.py  generator_categorical_unit_test.py  generator_groupby_unit_test.py  groupby_categorical_unit_test_parameters.py  groupby_unit_test_parameters.py  run.py  runall.py  test_accum2.py  test_accumtable.py  test_apply.py  test_base_function.py  test_bitcount.py  test_categorical.py  test_categorical_autotest_aggregated_functions.py  test_categorical_base_index.py  test_categorical_dtype.py  test_categorical_filter_invalid.py  test_categorical_functions.py  test_categorical_groupby.py  test_categorical_keywords.py  test_categorical_modify.py  test_categorical_ordered.py  test_categorical_setitem.py  test_categorical_sort_order.py  test_categorical_values.py  test_conversion_utils.py  test_csv.py  test_cut.py  test_dataset.py  test_dataset_slicing.py  test_date.py  test_datetime.py  test_datetime_math.py  test_fastarray.py  test_fastarray_bn.py  test_fastarray_constructor.py  test_fastarray_functions.py  test_flatten.py  test_groupby.py  test_groupby_autotest_aggregated_functions.py  (+31 more)
riptable/tests/temp/: ds_to_file.sds  st4.sds
riptable/tests/test_files/: groupby1_ex3.pickle  new_tz_names.sds  old_tz_names.sds  unicode_ex1.csv  unicode_ex2.csv  unicode_ex3.csv
